# advent-of-code

./: LICENSE  README.md  advent-of-code.cabal  aoc2020.cabal  cabal.project  default.nix  flake.nix  hie.yaml  shell.nix
app/: Day1.hs
input/: day5.txt  day7.txt  day8.txt
input/2020/: day21.txt
src/: Block.hs  Histogram.hs  Lib.hs  Parse.hs  Runners.hs
test/: AOC2020.hs  AOC2021.hs  Spec.hs  TestLib.hs
test/AOC2020/: Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
test/AOC2021/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs
