cabal-version: 2.4
name:          advent-of-code
version:       0
license:       BSD-3-Clause
build-type:    Simple
author:        Jonas Carpay
maintainer:    Jonas Carpay <jonascarpay@gmail.com>
copyright:     2020 Jonas Carpay

common deps
  build-depends:
    , array
    , base                >=4.13.0.0 && <5
    , containers
    , histogram-simple    >=1.1
    , lens
    , linear
    , megaparsec
    , mtl
    , parser-combinators
    , split
    , text
    , transformers
    , vector

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields -fno-warn-unused-do-bind

library
  import:          deps
  hs-source-dirs:  src
  exposed-modules:
    Block
    Lib
    Parse
    Runners

test-suite spec
  import:         deps
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    AOC2020
    AOC2020.Day01
    AOC2020.Day02
    AOC2020.Day03
    AOC2020.Day04
    AOC2020.Day05
    AOC2020.Day06
    AOC2020.Day07
    AOC2020.Day08
    AOC2020.Day09
    AOC2020.Day10
    AOC2020.Day11
    AOC2020.Day12
    AOC2020.Day13
    AOC2020.Day14
    AOC2020.Day15
    AOC2020.Day16
    AOC2020.Day17
    AOC2020.Day18
    AOC2020.Day19
    AOC2020.Day20
    AOC2020.Day21
    AOC2020.Day22
    AOC2020.Day23
    AOC2020.Day24
    AOC2020.Day25
    AOC2021
    AOC2021.Day01
    AOC2021.Day02
    AOC2021.Day03
    AOC2021.Day04
    AOC2021.Day05
    AOC2021.Day06
    AOC2021.Day07
    AOC2021.Day08
    AOC2021.Day09
    AOC2021.Day10
    AOC2021.Day11
    TestLib

  ghc-options:
    -Wall -fno-warn-incomplete-uni-patterns
    -fno-warn-incomplete-patterns -O2

  build-depends:
    , advent-of-code
    , hspec
