cabal-version:   2.4
name:            aoc2020
version:         0
license:         BSD-3-Clause
build-type:      Simple
extra-doc-files:
  README.md
  CHANGELOG.md

license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2020 Jonas Carpay

-- tested-with:     GHC ==8.8.3
-- category:        CATEGORIES

common common-options
  build-depends:
    , base        ^>=4.13.0.0
    , bytestring
    , containers
    , linear
    , mtl

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib

executable day1
  import:         common-options
  hs-source-dirs: app
  main-is:        Day1.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  aoc2020
