cabal-version: 2.4
name:          aoc2020
version:       0
license:       BSD-3-Clause
build-type:    Simple
author:        Jonas Carpay
maintainer:    Jonas Carpay <jonascarpay@gmail.com>
copyright:     2020 Jonas Carpay

library
  hs-source-dirs:     src
  exposed-modules:
    Lib
    Runners

  build-depends:
    , base        >=4.13.0.0 && <5
    , bytestring
    , containers
    , linear
    , megaparsec
    , mtl

  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields -fno-warn-unused-do-bind

  default-extensions: ImportQualifiedPost
